[package]
name = "text-to-image"
version = "0.1.0"
authors = ["Crian69 <chirayuprasai5@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
imageproc = "0.22.0"
rusttype = "0.9.2"
text_io = "0.1.9"